[package]
name = "rpc-perf"
description = "RPC Performance Testing"
version = "5.14.2-alpha.0"
authors = ["Brian Martin <brian@iop.systems>"]
edition = "2021"
homepage = "https://github.com/iopsystems/rpc-perf"
repository = "https://github.com/iopsystems/rpc-perf"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8.3"
async-channel = "1.9.0"
backtrace = "0.3.69"
boring = { version = "3.1.0", optional = true }
boring-sys = { version = "3.1.0", optional = true }
bytes = "1.5.0"
chrono = "0.4.31"
clap = "4.4.6"
flate2 = "1.0.28"
foreign-types-shared = "0.3.1"
futures = "0.3.28"
h2 = "0.4.6"
h3 = "0.0.6"
h3-quinn = "0.0.7"
hex = "0.4.3"
histogram = "0.11.0"
hmac = "0.12.1"
http = "1.1.0"
http-body-util = "0.1.0-rc.3"
humantime = "2.1.0"
hyper = { version = "1.0.0-rc.4", features = ["http1", "http2", "client"]}
hyper-rustls = "0.27.3"
hyper-util = { version = "0.1.8", features = ["full"] }
metriken = "0.7.0"
metriken-exposition = { version = "0.10.0", features = ["json", "parquet-conversion"] }
mio = "0.8.8"
momento = "0.42.0"
once_cell = "1.18.0"
openssl = { version = "0.10.66", optional = true }
openssl-src = "=300.3.1"
openssl-sys = { version = "0.9.103", optional = true }
paste = "1.0.14"
pelikan-net = { version = "0.4.1", default-features = false }
pin-project = "1.1.5"
prost = "0.13"
protocol-memcache = { git = "https://github.com/pelikan-io/pelikan" }
protocol-ping = { git = "https://github.com/pelikan-io/pelikan" }
quinn = "0.11.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
ratelimit = "0.9.0"
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl", "libz", "zstd-pkg-config"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
ringlog = "0.7.0"
rustls = "0.23.13"
rustls-native-certs = "0.7.1"
serde = { version = "1.0.185", features = ["derive"] }
session = { git = "https://github.com/pelikan-io/pelikan" }
sha1 = "0.10.6"
sha2 = "0.10.8"
slab = "0.4.9"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
tempfile = "3.10.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-boring = { version = "3.1.0", optional = true }
tokio-openssl = { version = "0.6.4", optional = true }
tokio-rustls = "0.26.0"
toml = "0.8.2"
tonic = "0.12"
url-escape = "0.1.1"
warp = "0.3.6"
webpki-roots = "0.26.5"
zipf = "7.0.1"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["openssl"]
boringssl = ["dep:boring", "boring-sys", "tokio-boring", "pelikan-net/boringssl"]
openssl = ["dep:openssl", "openssl-sys", "openssl/vendored", "tokio-openssl", "pelikan-net/openssl"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false

[profile.dev]
debug = true
opt-level = 0

