[package]
name = "rpc-perf"
description = "RPC Performance Testing"
version = "5.21.1-alpha.0"
authors = ["Brian Martin <brian@iop.systems>"]
edition = "2021"
homepage = "https://github.com/iopsystems/rpc-perf"
repository = "https://github.com/iopsystems/rpc-perf"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8.11"
async-channel = "2.3.1"
backtrace = "0.3.74"
boring = { version = "3.1.0", optional = true }
boring-sys = { version = "3.1.0", optional = true }
bytes = "1.10.1"
chrono = "0.4.39"
clap = "4.5.13"
flate2 = "1.1.0"
foreign-types-shared = "0.3.1"
futures = "0.3.31"
h2 = "0.4.8"
h3 = "0.0.6"
h3-quinn = "0.0.7"
hex = "0.4.3"
histogram = "0.11.3"
hmac = "0.12.1"
http = "1.2.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.6.0", features = ["http1", "http2", "client"]}
hyper-rustls = "0.27.5"
hyper-util = { version = "0.1.10", features = ["full"] }
metriken = "0.7.0"
metriken-exposition = { version = "0.12.2", features = ["json", "parquet-conversion"] }
mio = "1.0.3"
momento = "0.54.1"
once_cell = "1.20.3"
openssl = { version = "0.10.71", optional = true }
openssl-src = "300.4.2"
openssl-sys = { version = "0.9.106", optional = true }
paste = "1.0.15"
pelikan-net = { version = "0.4.1", default-features = false }
pin-project = "1.1.10"
prost = "0.13.5"
protocol-memcache = { git = "https://github.com/pelikan-io/pelikan" }
protocol-ping = { git = "https://github.com/pelikan-io/pelikan" }
quinn = "0.11.6"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
ratelimit = "0.10.0"
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl", "libz", "zstd-pkg-config"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
ringlog = "0.8.0"
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
session = { git = "https://github.com/pelikan-io/pelikan" }
sha1 = "0.10.6"
sha2 = "0.10.8"
slab = "0.4.9"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-boring = { version = "3.1.0", optional = true }
tokio-openssl = { version = "0.6.5", optional = true }
tokio-rustls = "0.26.2"
toml = "0.8.20"
tonic = "0.12.3"
url-escape = "0.1.1"
warp = "0.3.7"
webpki-roots = "0.26.8"

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = ["openssl"]
boringssl = ["dep:boring", "boring-sys", "tokio-boring", "pelikan-net/boringssl"]
openssl = ["dep:openssl", "openssl-sys", "openssl/vendored", "tokio-openssl", "pelikan-net/openssl"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false

[profile.dev]
debug = true
opt-level = 0

[package.metadata.generate-rpm]
auto_req = "builtin"
assets = [
    { source = "target/release/rpc-perf", dest = "/usr/bin/", mode = "755" },
]
