[package]
name = "rpc-perf"
description = "RPC Performance Testing"
version = "5.25.1-alpha.0"
authors = ["Brian Martin <brian@iop.systems>"]
edition = "2021"
homepage = "https://github.com/iopsystems/rpc-perf"
repository = "https://github.com/iopsystems/rpc-perf"
license = "MIT OR Apache-2.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dependencies]
ahash = "0.8.12"
async-channel = "2.5.0"
backtrace = "0.3.76"
bytes = "1.11.1"
chrono = "0.4.44"
clap = "4.6.0"
flate2 = "1.1.9"
futures = "0.3.32"
h2 = "0.4.13"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hex = "0.4.3"
histogram = "1.0.0"
hmac = "0.12.1"
http = "1.4.0"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = { version = "1.8.1", features = ["http1", "http2", "client"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.20", features = ["full"] }
metriken = "0.8.0"
metriken-exposition = { version = "0.14.0", features = [
    "json",
    "parquet-conversion",
] }
mio = "1.1.1"
momento = "0.61.0"
once_cell = "1.21.4"
paste = "1.0.15"
pelikan-net = { git = "https://github.com/pelikan-io/pelikan" }
pin-project = "1.1.11"
prost = "0.13.5"
protocol-memcache = { git = "https://github.com/pelikan-io/pelikan" }
protocol-ping = { git = "https://github.com/pelikan-io/pelikan" }
quinn = "0.11.9"
rand = "0.9.2"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
ratelimit = { git = "https://github.com/iopsystems/ratelimit" }
redis = { version = "1.0.5", features = [
    "tokio-comp",
    "tls-rustls",
    "tokio-rustls-comp",
] }
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
session = { git = "https://github.com/pelikan-io/pelikan" }
sha1 = "0.10.6"
sha2 = "0.10.9"
slab = "0.4.12"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
] }
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "1.0.7"
tonic = "0.12.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url-escape = "0.1.1"
warp = { version = "0.4.2", features = ["server"] }
webpki-roots = "1.0.6"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
codegen-units = 1
panic = "abort"
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false

[profile.dev]
debug = true
opt-level = 0

[package.metadata.generate-rpm]
auto_req = "builtin"
assets = [
    { source = "target/release/rpc-perf", dest = "/usr/bin/", mode = "755" },
]
