[package]
name = "rpcperf-dataspec"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
utoipa = [ "dep:utoipa" ]

[dependencies]
histogram = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.47"

[dependencies.utoipa]
version = "4.1.0"
optional = true
