[package]
name = "rpcperf-dataspec"
description = "Data structure specifications for interoperability with rpc-perf"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
utoipa = [ "dep:utoipa" ]
schemars = [ "dep:schemars", "histogram/schemars" ]

[dependencies]
histogram = { workspace = true }
schemars = { version = "0.8", optional = true }
serde = { workspace = true }
thiserror = "1.0.47"

[dependencies.utoipa]
version = "4.1.0"
optional = true
